Some pom cleanup

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
 	<url>https://github.com/ggeorgovassilis/gwt-sl</url>
 	<version>1.7-SNAPSHOT</version>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<issueManagement>
 		<system>Github</system>
