--- a/gwt-sl/pom.xml
+++ b/gwt-sl/pom.xml
@@ -4,15 +4,12 @@
                         http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>net.sf.gwt-widget</groupId>
 	<artifactId>gwt-sl</artifactId>
+	<version>1.7</version>
 	<name>gwt-sl</name>
 	<packaging>jar</packaging>
-	<parent>
-		<groupId>net.sf.gwt-widget</groupId>
-		<artifactId>gwt-sl-parent</artifactId>
-		<version>1.7-SNAPSHOT</version>
-	</parent>
-	
+
 	<properties>
 		<github.global.server>github</github.global.server>
 		<java.version>1.7</java.version>
