--- a/gwt-sl/pom.xml
+++ b/gwt-sl/pom.xml
@@ -6,12 +6,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.gwt-widget</groupId>
 	<artifactId>gwt-sl</artifactId>
-	<version>1.7</version>
+	<version>1.7_gwt-2.8.2</version>
 	<name>gwt-sl</name>
 	<packaging>jar</packaging>
 
 	<properties>
-		<github.global.server>github</github.global.server>
 		<java.version>1.7</java.version>
 	</properties>
 
@@ -21,9 +20,9 @@
 
 	<distributionManagement>
 		<repository>
-			<id>internal.repo</id>
-			<name>Temporary Staging Repository</name>
-			<url>file://${project.build.directory}/mvn-repo</url>
+			<id>touk-repository</id>
+			<name>deployment</name>
+			<url>https://nexus.touk.pl/nexus/content/repositories/releases/</url>
 		</repository>
 	</distributionManagement>
 
@@ -33,7 +32,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-servlet</artifactId>
-			<version>2.7.0</version>
+			<version>2.8.2</version>
 		</dependency>
 		<dependency>
 			<groupId>cglib</groupId>
@@ -44,7 +43,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
-			<version>2.7.0</version>
+			<version>2.8.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -57,9 +56,6 @@
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.8.2</version>
-				<configuration>
-					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -98,39 +94,6 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.12</version>
-				<configuration>
-					<message>Maven artifacts for ${project.version}</message>
-					<!-- disable webpage processing -->
-					<noJekyll>true</noJekyll>
-					<!-- matches distribution management repository url above -->
-					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
-					<!-- remote branch name -->
-					<branch>refs/heads/mvn-repo</branch>
-					<!-- If you remove this then the old artifact will be removed and new 
-						one will replace. But with the merge tag you can just release by changing 
-						the version -->
-					<merge>true</merge>
-					<includes>
-						<include>**/*</include>
-					</includes>
-					<!-- github repo name -->
-					<repositoryName>gwt-sl</repositoryName>
-					<!-- github username -->
-					<repositoryOwner>ggeorgovassilis</repositoryOwner>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>site</goal>
-						</goals>
-						<phase>deploy</phase>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
