--- a/test-webapp/pom.xml
+++ b/test-webapp/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.sf.gwt-widget</groupId>
 	<artifactId>test-webapp</artifactId>
-	<version>1.7</version>
+	<version>1.7_gwt-2.8.2</version>
 	<packaging>war</packaging>
 	<description>
 		Test project for the gwt-sl. Don't include this as a dependency or anything else.
@@ -18,7 +18,7 @@
 		<spring.version>4.2.5.RELEASE</spring.version>
 		<slf4j.version>1.7.13</slf4j.version>
 		<tomcat.version>8.0.30</tomcat.version>
-		<gwt-sl.version>1.7</gwt-sl.version>
+		<gwt-sl.version>1.7_gwt-2.8.2</gwt-sl.version>
 	</properties>
 
 	<dependencies>
@@ -169,7 +169,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.7.0</version>
+				<version>2.8.2</version>
 				<executions>
 					<execution>
 						<goals>
